Fixed issues on mobile

--- a/task13/css/index.css
+++ b/task13/css/index.css
@@ -163,7 +163,7 @@ select {
     background: hsl(0, 0%, 100%);
     border: 2px solid hsl(30, 80%, 50%);
     border-radius: .5em;
-    /* display: none; */
+    display: none;
     left: 50%;
     margin: 0 auto;
     max-width: 400px;
